--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p>JavaScript array elements are accesses using numeric indexes (starting from 0).</p>
 
 <script>
-var names = ["Saman", "Amara", "Geetha","Senhas","Vanuja"];
+var names = ["Sam", "Amara", "Geetha","Senhas","Vanuja"];
 
 for(var i =0;i<6;++i)
  document.write(names[i]+"<br/>");
